[ZEPPELIN-6435] Remove frontend build dependency from IndexHtmlServletTest
### What is this PR for?
`IndexHtmlServletTest` included a disabled Angular HTML addon test because it depended on the generated file at `zeppelin-web-angular/dist/zeppelin/index.html`. That artifact is not built during normal `zeppelin-server` tests, so the test could not run independently.

This PR replaces the frontend build dependency with a temporary, test-owned `index.html` file and re-enables `testZeppelinWebAngularHtmlAddon`.

The `zeppelin-web` index and the Angular-style index exercise different branches in `IndexHtmlServlet`. The `zeppelin-web` index does not contain explicit `</head>` and `</body>` closing tags, so the servlet falls back to inserting the head addon before `<body>` and the body addon before `</html>`. The Angular-style index contains both closing tags, so the re-enabled test verifies that the configured head and body addons are inserted immediately before `</head>` and `</body>`.

### What type of PR is it?
Improvement

### Todos
- [x] Remove the dependency on `zeppelin-web-angular/dist/zeppelin/index.html`
- [x] Create a temporary, test-owned Angular-style `index.html`
- [x] Re-enable `testZeppelinWebAngularHtmlAddon`
- [x] Verify addon insertion before `</head>` and `</body>`

### What is the Jira issue?
[[ZEPPELIN-6435]](https://issues.apache.org/jira/browse/ZEPPELIN-6435)

### How should this be tested?
`./mvnw test -pl zeppelin-server -Dtest=IndexHtmlServletTest` passes successfully.

### Screenshots (if appropriate)
N/A

### Questions:
* Does the license files need to update? No
* Is there breaking changes for older versions? No
* Does this needs documentation? No


Closes #5314 from gyowoo1113/ZEPPELIN-6435-index-html-servlet-test-frontend-independence.

Signed-off-by: ChanHo Lee <chanholee@apache.org>